--- a/package.json
+++ b/package.json
@@ -3,18 +3,23 @@
   "version": "1.0.0",
   "main": "main.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node main.ts"
+    "test": "jest",
+    "build": "tsc",
+    "start": "ts-node src/main.ts"
   },
   "author": "Tarandeep Sethi",
-  "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "redis": "^4.7.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.1",
+    "@types/jest": "^29.5.14",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.3.0",
+    "ts-node": "^10.9.2",
     "typescript": "^5.8.2",
-    "ts-node": "^10.9.2"
+    "nodemon": "^3.1.9"
   }
 }
